# sysinfo

./: CMakeLists.txt  readme.md  sysinfo.h  sysinfo_linux.cpp  sysinfo_mac.cpp
test/: CMakeLists.txt  test_sysinfo.cpp
